@@ -49,6 +49,7 @@
 	    to Pavel Roskin.
 	* Fixed all fatalError() calls lacking a "\n", thanks to Pavel Roskin.
 	* Fixed a segfault in yes when no args were given -- Pavel Roskin.
+	* Simplified freeramdisk and added argument checking -- Pavel Roskin. 
 	* More doc updates
 
 
